fixing overflow error

--- a/_scss/_footer.scss
+++ b/_scss/_footer.scss
@@ -101,9 +101,6 @@
   transition: transform 1s ease;
 }
 .newsletter-success {
-  .section-info {
-    overflow: hidden;
-  }
   .headline {
     transform: translateX(-100%);
   }
