--- a/_scss/_home.scss
+++ b/_scss/_home.scss
@@ -180,6 +180,7 @@
         display: flex;
         height: 27em;
         justify-content: center;
+        overflow: hidden;
         position: relative;
         width: 27em;
         font-size: 0.6em;
